# jetson-car

./: .clang-format  .clangd  .gitignore  JETSON_INSTALL.md  NodeGraph.md  PRD.md  compile_commands.json  controller_setuup.sh  install_jetson.sh  readme.md  setup_demo.sh
src/gpio_node/: package.xml  setup.cfg  setup.py
src/gpio_node/gpio_node/: gpio_node.py
src/lane_detection/: CMakeLists.txt  package.xml  setup.py
src/lane_detection/include/lane_detection/: lane_detector.h  ld_conf_calculator.h  ld_config.h  ld_postprocessor.h  ld_preprocessor.h  ld_scanner.h
src/lane_detection/lane_detection/: lane_detection_node.py  ld_conf_calculator.py  ld_postprocessor.py
src/lane_detection/src/: lane_detection_node.cpp  lane_detector.cpp  ld_conf_calculator.cpp  ld_postprocessor.cpp  ld_preprocessor.cpp  ld_scanner.cpp
src/lane_detection_py/: package.xml  setup.cfg  setup.py
src/lane_detection_py/lane_detection_py/: lane_detection_node.py  lane_detector.py  ld_conf_calculator.py  ld_postprocessor.py  ld_preprocessor.py  ld_scanner.py
src/lane_perception/: package.xml  setup.cfg  setup.py
src/lane_perception/lane_perception/: lane_detector.py  lane_perception_node.py  ld_conf_calculator.py  ld_config.py  ld_postprocessor.py  ld_preprocessor.py  ld_scanner.py
src/sensor_fusion/: package.xml  setup.py
src/sensor_fusion/config/: ekf.yaml
src/sensor_fusion/sensor_fusion/: gpio_node.py  joy_node.py  odometry_estimator_node.py  vicon_converter_node.py
src/speedometer/: CMakeLists.txt  package.xml
src/speedometer/src/: speedometer_node.cpp
src/speedometer_py/: package.xml  setup.cfg  setup.py
src/speedometer_py/speedometer_py/: speedometer_node.py
src/traffic_light_py/: package.xml  setup.cfg  setup.py
src/traffic_light_py/traffic_light_py/: traffic_light_node.py
src/vehicle_bringup/: CMakeLists.txt  package.xml
src/vehicle_bringup/config/: nav2_params.yaml  real_nav2_param.yaml  sim_nav2_params.yaml  vehicle.yaml
src/vehicle_bringup/launch/: 3dlane.launch.py  basic_nav.launch.py  hardware.launch.py  lane.launch.py  nav2_minimal_bringup.launch.py  test_teleop.launch.py
src/vehicle_bringup/rviz/: 3dlane.rviz  hardware.rviz  nav2.rviz
src/vehicle_bringup/urdf/: jetson-car.urdf  jetson_car.ros2_control.xacro  jetson_car.urdf.xacro  jetson_car_core.xacro
src/vehicle_bringup/worlds/: cyber_city.sdf  cyber_city_custom.sdf
src/vehicle_bringup/worlds/materials/meshes/: cyber_city.dae  cyber_city_lines.dae
src/vehicle_bringup/worlds/materials/textures/: cyber_city_map.yaml  cyber_city_with_brim.yaml  cyber_city_without_brim.yaml  inner_track.yaml  outer_track.yaml
src/vehicle_controller/: CMakeLists.txt  package.xml  readme_vehicle_controller.md
src/vehicle_controller/config/: coordinates.csv
src/vehicle_controller/include/vehicle_controller/: msc_if.h  vehicle.h  waypoint_loader.hpp
src/vehicle_controller/launch/: launch_nodes.py  wp_follow.py
src/vehicle_controller/src/: coordinates.csv  msc_if.cpp  vehicle.cpp  vehicle_controller_node.cpp  waypoint_loader.cpp  waypoint_loader_node.cpp
src/vehicle_controller_py/: package.xml  setup.cfg  setup.py
src/vehicle_controller_py/config/: coordinates.csv
src/vehicle_controller_py/launch/: launch_nodes.launch.py  teleop.launch.py
src/vehicle_controller_py/vehicle_controller_py/: msc_if.py  teleop_bridge.py  vehicle.py  vehicle_controller_node.py  waypoint_loader_node.py  wp_follower.py
src/vehicle_gui/: package.xml  readme_vehicle_gui.md  setup.cfg  setup.py
src/vehicle_gui/vehicle_gui/: grid_manager.py  path_planner.py  path_planner_AStar_old.py  waypoint_gui.py  waypoint_gui_old.py
src/vehicle_hardware/: CMakeLists.txt  jetson_car_system_hardware.xml  package.xml  setup.cfg  setup.py
src/vehicle_hardware/config/: controllers.yaml  logitech_f710.yaml
src/vehicle_hardware/include/vehicle_hardware/: JetsonCarSystemHardware.hpp
src/vehicle_hardware/src/: JetsonCarSystemHardware.cpp
src/vehicle_hardware/vehicle_hardware/: ackermann_kinematics_node.py  ackermann_teleop.py  gpio_node.py  maestro_interface_node.py  sim_ground_truth_node.py  steering_bridge_node.py
src/vehicle_perception/: package.xml  setup.cfg  setup.py
src/vehicle_perception/vehicle_perception/: camera_driver_node.py  camera_lane_node.py  lane_detector_node.py  spatial_lane_node.py  ufld_node.py  yolop_node.py
src/vicon_display/: CMakeLists.txt  package.xml  readme_vicon_reader.md
src/vicon_display/src/: vicon_display_node.cpp
src/vicon_display_py/: package.xml  setup.cfg  setup.py
src/vicon_display_py/vicon_display_py/: vicon_display_node.py
src/video_nodes/: CMakeLists.txt  package.xml  readme.md
src/video_nodes/src/: video_publisher.cpp  video_subscriber.cpp
src/video_nodes_py/: package.xml  setup.cfg  setup.py
src/video_nodes_py/video_nodes_py/: openmv_node.py  traffic_light_node.py  video_publisher_node.py  video_publisher_node_test.py  video_subscriber_node.py
